--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>Dashboard - Nób</title>
     <link rel="stylesheet" href="../assets/style/home.css">
 </head>
 
@@ -14,14 +14,8 @@
                 <h3>Bem-vindo, <span id="name">User</span>!</h3>
             </div>
             <div class="UserInfos">
-                <div class="ImgsUser">
-                    <img src="../assets/imgs/icons/search.png" alt="" srcset="">
-                    <img src="../assets/imgs/icons/bell.png" alt="" srcset="">
-                    <div id="perfil">
                         <img src="../assets/imgs/icons/userLogin.png" alt="" srcset="">
                         <img src="../assets/imgs/icons/Profile.png" alt="" srcset="">
-                    </div>
-                </div>
             </div>
         </div>
 
