--- a/pages/orders.html
+++ b/pages/orders.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pedidos</title>
+    <link rel="stylesheet" href="../assets/style/orders.css" />
 </head>
+
 <body>
-    <h1>Pedidos</h1>
+    <main class="section-content">
+        <div class="pedidos-header">
+            <button class="btn-primary">Criar Novo Pedido</button>
+            <div class="search-box">
+                <input type="text" id="searchInput" placeholder="Buscar pedido..." />
+                <button><img width="80%" src="../assets/imgs/icons/search.png" alt="" srcset=""></button>
+            </div>
+        </div>
+        <div id="pedidosContainer"></div>
+    </main>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            if (window.location.hash.includes('#/pedidos')) {
+                const script = document.createElement('script');
+                script.src = 'orders.js';
+                document.body.appendChild(script);
+            }
+        });
+    </script>
 </body>
+
 </html>
