--- a/pages/products.html
+++ b/pages/products.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link rel="stylesheet" href="../assets/style/products.css">
 </head>
 <body>
     <h1>Products</h1>
+    <script src="../script/products.js"></script>
 </body>
 </html>
