style(css): Tranformação das imagens de pgn para svg

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Nobréga - Dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/style/login.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
   <div class="login-container">
@@ -22,7 +23,6 @@
 
       <a href="./app.html"><button type="submit" class="btn">Entrar</button></a>
   </div>
-
   <script src="./script/index.js"></script>
 </body>
 </html>
