--- a/pages/orders.html
+++ b/pages/orders.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pedidos</title>
     <link rel="stylesheet" href="../assets/style/orders.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,15 +20,14 @@
         </div>
         <div id="pedidosContainer"></div>
     </main>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            if (window.location.hash.includes('#/pedidos')) {
-                const script = document.createElement('script');
-                script.src = 'orders.js';
-                document.body.appendChild(script);
-            }
-        });
+        AOS.init();
+    </script>
+    <script>
+        const script = document.createElement('script');
+        script.src = 'orders.js';
+        document.body.appendChild(script);
     </script>
 </body>
 
