--- a/pages/orders.html
+++ b/pages/orders.html
@@ -12,7 +12,7 @@
 <body>
     <main class="section-content">
         <div class="pedidos-header">
-            <button class="btn-primary">Criar Novo Pedido</button>
+            <button id="new" class="btn-primary" onclick="window.location.hash = '#/newOrder'">Criar Novo Pedido</button>
             <div class="search-box">
                 <input type="text" id="searchInput" placeholder="Buscar pedido..." />
                 <button><img width="80%" src="../assets/imgs/icons/search.png" alt="" srcset=""></button>
